@@ -172,8 +172,10 @@
 
     <dependency org="jdiff" name="jdiff" rev="${jdiff.version}"
       conf="jdiff->default"/>
-    <dependency org="xerces" name="xerces" rev="${xerces.version}"
-      conf="jdiff->default"/>
+    <dependency org="xalan" name="xalan" rev="${xalan.version}"
+      conf="test->default"/>
+    <dependency org="xerces" name="xercesImpl" rev="${xerces.version}"
+	    conf="jdiff->default;test->default"/>
     <dependency org="com.jcraft" name="jsch" rev="${jsch.version}"
       conf="compile->master"/>
     <dependency org="jline" name="jline" rev="${jline.version}"
@@ -181,7 +183,7 @@
     <dependency org="net.java.dev.javacc" name="javacc" rev="${javacc.version}"
       conf="compile->master"/>
     <dependency org="junit" name="junit" rev="${junit.version}"
-      conf="compile->master"/>
+	    conf="test->master"/>
     <dependency org="com.google.code.p.arat" name="rat-lib" rev="${rats-lib.version}"
       conf="releaseaudit->default"/>
     <dependency org="org.codehaus.groovy" name="groovy-all" rev="${groovy.version}"
