@@ -64,7 +64,8 @@ netty.version=3.2.2
 rats-lib.version=0.5.1
 slf4j-api.version=1.6.1
 slf4j-log4j12.version=1.6.1
-xerces.version=1.4.4
+xerces.version=2.10.0
+xalan.version=2.7.1
 wagon-http.version=1.0-beta-2
 zookeeper.version=3.3.3
 servlet.version=4.0.6
